syntax = "proto3";

package protocol;

option java_package = "org.tron"; //Specify the name of the package that generated the Java file
option java_outer_classname = "Dual"; //Specify the class name of the generated Java file
option go_package = "message";

// Note: callBacks are call back functions sent to kardia ask it to execute smart contract
// callBacks are called after method has been executed successfully
// txId generated after execute method will be append to every callBack method.
message Message {
    string transactionId = 1;
    string contractAddress = 2;
    string methodName = 3;
    repeated string params = 4;
    uint64 amount = 5;
    string sender = 6;
    uint64 blockNumber = 7;
    uint64 timestamp = 8;
}
